instanceof in progress